Initial version of background reports
